Added input validation and endeless switching colors

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHRISTMAS TREE</title>
+    
 </head>
-<body>
+<body class = "bodyDiv" id="bodySec">
     <script src="./scripts/tree.js"></script>
 </body>
 </html>
